src/public/less/master.less
/* ... */
.sd-modal {
  z-index: 1;

  &:after {
    z-index: 1;
    content: " ";
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.8);
  }

  .sd-modal-content {
    position: absolute;
    background: #ffffff;
    z-index: 2;

    .title {
      font-family: 'Apex New Light';
      color: #f36c00 !important;
      margin-top: 25px;
      margin-bottom: 12px;
      font-size: 24px;
    }
  }

  .close-sd-modal {
    color: #ffffff;
    position: absolute;
    top: -50px;
    right: -50px;
  }
}

.fixed-box {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background: rgba(0, 0, 0, 0.5);
  overflow: hidden;
  z-index: 2;

  .fix-box-inner {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow-y: scroll;
    padding: 0 50px;

    .page-box-close {
      position: absolute;
      top: 0;
      right: -40px;
      cursor: pointer;

      img {
        width: 30px;
        height: 30px;
      }
    }

    .title {
      text-align: center;
      font: 24px/1 'DIN', Arial, Helvetica, sans-serif;
      color: #f36c00 !important;
      margin-top: 25px;
      margin-bottom: 12px;
    }
  }
}
.capture_left {
    display: none;
}
.login-box {
  position: relative;
  width: 536px;
  padding: 26px 53px 95px;
  background: #ffffff;
  margin: 150px auto 0;
}

#password-changed {
  .title {
    text-align: left;
  }
}

#login {

  .wrp-buttons {
    margin-top: 25px;
  }

  .btn-cancel, .btn-login {
    width: 135px;
  }

  .wrp-remember {
    display: inline-block;
    margin: 25px 0 0;

  }

  .forgot-pass {
    margin: 25px 0 0 0;
  }

  .register {
    margin-top: 10px;
    color: #425464;
  }
}

#congrats {

  .register-info-box {
    width: 530px;
    min-height: 200px;
    top: 110px;
    left: 50%;
    margin-left: -265px;
    padding: 38px 0 53px;
    text-align: center;
  }

  .reg-confirmed {
    font-size: 12px;
    line-height: 20px;
    padding: 0 90px;
  }

  .wrp-btn-close {
    margin-top: 25px;
  }

  .btn-close {
    width: 137px;
  }
}

.disable-button {
    pointer-events: none;
    cursor: default;
    opacity: 0.6;
}

@media print {
  .tools.center {
    display: none;
  }

  .downloadSection{
    height: auto !important;
  }
}
/* custom third developer comments addressed */
.janrain-capture-ui .capture_form_item {
    clear: initial !important;
}
#capture_editProfile_editProfileForm .capture_select{
    width: 100% !important;
    padding: 10px !important;
    font-size: 14px !important;
    font-family: 'DIN', Arial, Helvetica, sans-serif !important;
    font-weight: 300 !important;
    border: 1px solid #cccccc !important;
    margin-bottom: 5px !important;
    border-radius: 5px !important;
    color: #333 !important;
    -webkit-appearance: none !important;
    background-color: transparent !important;
    box-shadow: none !important;
}
#capture_editProfile_editProfileForm .capture_text_input{
    width: 100% !important;
    padding: 10px !important;
    font-size: 14px !important;
    font-family: 'DIN', Arial, Helvetica, sans-serif !important;
    font-weight: 300 !important;
    border: 1px solid #cccccc !important;
    margin-bottom: 5px !important;
    border-radius: 5px !important;
    color: #333 !important;
    -webkit-appearance: none !important;
    background-color: transparent !important;
    box-shadow: none !important;
}
.janrain-capture-ui .capture_col_8 {
    width: 100% !important;
}
.janrainContent {
    margin: 0 auto !important;
    background-color: transparent !important;
    border: none !important;
    margin-top: 15px !important;
    height: 40px !important;
    width: 198px !important;
}
.janrain-capture-ui .login_widget {
    min-height: auto !important;
}
li#janrain-twitter {
    display: none;
}
ul#janrainProviders_1 {
    display: none;
}
#editProfile h3 {
    font-family: 'DIN', Arial, Helvetica, sans-serif !important;
    margin: 0 0 14px !important;
}
.janrain-capture-ui .capture_form_item .capture_btn {
    width: 100% !important;
}
.janrain-capture-ui .capture_form_item>label {
  width: 100% !important;
    font-size: 14px !important;
    font-family: 'DIN', Arial, Helvetica, sans-serif !important;
    font-weight: 300 !important;
    margin-bottom: 5px !important;
    color: #333 !important;
    -webkit-appearance: none !important;
}
.janrain-capture-ui .capture_form_item:last-child {
    margin-bottom: 15px !important;
}
#capture_editProfile_saveButton{
      width: 100% !important;
    padding: 10px !important;
    font-size: 14px !important;
    font-family: 'DIN', Arial, Helvetica, sans-serif !important;
    border: 0px !important;
    color: #fff !important;
    margin-bottom: 5px !important;
    cursor: pointer !important;
    border-radius: 5px !important;
    transition: 0.3s !important;
}
#capture_editProfile_editProfileForm .capture_form_item.column.col-4  {
    margin-top: 2%;
}
.janrain-capture-ui#editProfile .capture_form_item label {
    margin-bottom: 4px !important;
}
.note{
  font-family: 'DIN', Arial, Helvetica, sans-serif !important;
    font-weight: 300 !important;
    font-size: 13px !important;
    color: #666 !important;
}
.forgot-password {
    line-height: 5px !important;
    clear: both !important;
    margin-left: 0 !important;
    margin-bottom: 15px !important;
    font-family: 'DIN', Arial, Helvetica, sans-serif !important;
    font-weight: 300 !important;
    font-size: 13px !important;
    color: #666 !important;
    padding-top: 15px;
    padding-bottom: 15px;
}
.janrain-capture-ui#editProfile {
    margin-bottom: 30px !important;
}
@media only screen and (min-width: 1023px) {
    #registration_termsAndConditionsLabel {
        width: 92% !important;
    }
}
#janrainModal .capture_footer {
  box-shadow: none !important;
  background-color: transparent !important;
}
input#capture_changePassword_saveButton {
  margin-top: 30px !important;
}

.accept-sec {
    display: block;
    clear: both;
}

